plugins {
    id 'java'
}

group 'be.selske.aoc'
version '1.0-SNAPSHOT'

sourceCompatibility = JavaVersion.VERSION_13

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}
tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}

repositories {
    mavenCentral()
}

